<package>
  <name>dt_local_planner</name>
  <description>
    A local planner for the ROS navigation stack with dynamic trajectory planning. </description>
  <version>1.0.0</version>
  <maintainer email="stephan.hofstaetter@gmail.com">Stephan Hofstaetter</maintainer>
  <author email="stephan.hofstaetter@gmail.com">Stephan Hofstaetter</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/dt_local_planner</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>angles</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>

  <build_depend>angles</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>

  <export>
    <nav_core plugin="${prefix}/blp_plugin.xml" />
  </export>
</package>
