<package>
  <name>wheeled_robin_apps</name>
  <version>1.0.0</version>
  <description>The wheeled_robin_apps is a group of applications to run on the WheeledRobin Robot.</description>
  <maintainer email="joh.mayr@jku.at">Johannes Mayr</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/wheeled_robin_apps</url>
  <url type="repository">https://github.com/robinJKU/wheeled_robin_apps</url>
  <url type="bugtracker">https://github.com/robinJKU/wheeled_robin_apps/issues</url>
  <author email="joh.mayr@jku.at">Johannes Mayr</author>
  <author email="klemens.springer@jku.at">Klemens Springer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros-hydro-joystick-drivers</build_depend>
  <run_depend>wheeled_robin_teleop</run_depend>
  <run_depend>wheeled_robin_core_apps</run_depend>
  <run_depend>video_player</run_depend>

  <export>
    <metapackage/>
  </export>
</package>

