<package>
  <name>wheeled_robin_formation_drive</name>
  <version>1.0.0</version>
  <description>
     several robots are moving in a given formation
  </description>
  <author>tba</author>
  <maintainer email="tba@tba.tba">tba tba</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/wheeled_robin_formation_drive</url>
  <url type="repository">https://github.com/robinJKU/wheeled_robin_formation_drive</url>
  <url type="bugtracker">https://github.com/robinJKU/wheeled_robin_formation_drive/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ar_pose</build_depend>
  <build_depend>ar_kinect</build_depend>

  <run_depend>ar_pose</run_depend>
  <run_depend>ar_kinect</run_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
