<?xml version="1.0"?>
<package>
  <name>wheeled_robin_navigation</name>
  <version>1.0.0</version>
  <description>The wheeled_robin_navigation package provides the turtlebot_navigation package for the Wheeled Robin</description>

  <maintainer email="stephan.hofstaetter@gmail.com">Stephan Hofstaetter</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/wheeled_robin_navigation</url>
  <url type="repository">https://github.com/robinJKU/wheeled_robin_apps/wheeled_robin_navigation</url>
  <url type="bugtracker">https://github.com/robinJKU/wheeled_robin_apps/wheeled_robin_navigation/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>turtlebot_navigation</build_depend>
  <run_depend>turtlebot_navigation</run_depend>

</package>
