<?xml version="1.0"?>
<package>
  <name>wheeled_robin_teleop</name>
  <version>0.0.0</version>
  <description>The wheeled_robin_teleop package provides nodes and launch files for teleoperating WheeledRobin</description>

  <maintainer email="joh.mayr@jku.at">Johannes Mayr</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/wheeled_robin_teleop</url>
  <url type="repository">https://github.com/robinJKU/wheeled_robin_apps</url>
  <url type="bugtracker">https://github.com/robinJKU/wheeled_robin_apps/issues</url>
  <author email="joh.mayr@jku.at">Johannes Mayr</author>
  <author email="klemens.springer@jku.at">Klemens Springer</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joy</run_depend>
  <run_depend>turtlebot_teleop</run_depend>

</package>
